[project]
name = "godin"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.55",
    "boto3-stubs[full]>=1.40.55",
    "cartopy>=0.25.0",
    "google-cloud-storage>=3.4.1",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "pyqt5>=5.15.11",
    "python-markdown>=0.1.0",
    "sqlalchemy>=2.0.44",
]
